# test-sast

./: --  .clang-tidy  .gitignore  CMakeLists.txt  results.txt
.github/actions/cpp-lint/: action.yaml  remove_duplicate_error.py
.github/workflows/: cpp-lint.yaml
src/: CMakeLists.txt
src/libPalindrome/: CMakeLists.txt  palindrome.cpp  palindrome.h
src/palindrome/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  palindrome_test.cpp  unittests.cpp
